# zinctx

./: Cargo.toml  build.rs
src/: call.rs  const.rs  lib.rs  protos.rs  query.rs  zandbox_const.rs  zinc.proto  zinctx.proto
src/const/: zandbox.rs
src/contracts/: example.proto
src/protos/: example.rs  mod.rs  zinc.rs  zinctx.rs
