[package]
name = "zinctx"
version = "0.1.0"
authors = ["motxx <5776910+motxx@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
c_vec = "1.0"
libc = "0.2"
protobuf = "2.18"
serde_json = "1.0"
zksync = { git = "https://github.com/motxx/zksync", branch = "update-metrics" }
zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }
zksync_eth_signer = { git = "https://github.com/matter-labs/zksync", branch = "master" }

[build-dependencies]
protoc-rust = "2.0"
