[package]
name = "zinctx"
version = "0.1.0"
authors = ["motxx <5776910+motxx@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
c_vec = "1.0"
libc = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
url = "2.2"
zksync = { git = "https://github.com/motxx/zksync", branch = "update-metrics" }
zksync_types = { git = "https://github.com/motxx/zksync", branch = "update-metrics" }
zksync_eth_signer = { git = "https://github.com/motxx/zksync", branch = "update-metrics" }
